optimise get cross reference calls